--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,6 +1,6 @@
 :root {
   --primary: #12162d;
-  --primary-text: #ffffff;
+  --primary-text: #fbd301;
   --secondary: #8cff9b;
   --secondary-text: #12173d;
   --accent: #ac3232;
